examples/errors/parsing/fibonacci-iter-no-eq.cn
fun fib : Int -> Int [impure] = {
  n ->
  iter (i 0) {
    Done i : Step(Int, Int)
  }
}

main : () [impure] = ()
